[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sprites/objects/Character.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/objects/dust.png" type="Texture" id=2]
[ext_resource path="res://objects/Player.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 6.5 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -5.0, 5.0, -5.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DustParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 15.0, -15.0, 15.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DustParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Curve" id=4]
max_value = 4.0
_data = [ Vector2( 0, 0.881818 ), 0.0, 0.0, 0, 0, Vector2( 0.205882, 1.13636 ), -0.345033, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.40884, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.564706, 0.564706, 0.564706, 0, 1, 1, 1, 0 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 5, 5.5 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 3 )
speed = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 0.0872665
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/walk = SubResource( 3 )

[node name="DustParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0, 6 )
emitting = false
amount = 12
lifetime = 3.0
local_coords = false
texture = ExtResource( 2 )
gravity = Vector2( 0, -140 )
initial_velocity = 1.0
initial_velocity_random = 0.17
angular_velocity = 20.0
angular_velocity_random = 1.0
tangential_accel = -55.05
tangential_accel_random = 0.12
scale_amount_curve = SubResource( 4 )
color_ramp = SubResource( 5 )

[node name="WeaponPoint" type="Position2D" parent="."]
position = Vector2( 5, 1 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -0.5 )
shape = SubResource( 6 )

[node name="Tween" type="Tween" parent="."]

[node name="HitParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 15
lifetime = 0.2
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 76.01
initial_velocity_random = 0.21

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
